packages/ui-toolkit/src/components/atoms/Button/button.css
.btn96DefaultClass {
  border-radius: 8px;
  flex-shrink: 0;
  cursor: default;
}

.btn96ParentClass {
 display: inline-block;
}

.btn96DefaultClass:hover {
  opacity: 0.9;
}

/* -- Size Classes -- */


.btn96SmallButton {
  padding: 12px;
  height: 32px;
  gap: 6px;
  width: fit-content;
}

.btn96MediumButton {
  padding: 12px 16px;
  height: 40px;
  width: fit-content;
  gap: 6px;
}

.btn96LargeButton {
  padding: 16px 24px;
  width: fit-content;
  height: 48px;
  gap: 8px;
}

.btn96XLargeButton {
 width: fit-content;
 height: fit-content;
 padding: 16px 24px;
 height: 56px;
 gap: 8px;
}

.btn86FullWidth{
  width: 100%;
}

.btnIconLeading {
  width: 100%;
  height: 100%;
}

.btn96Disabled {
 background-color: var(--gray150);
}

/* -- Seconday Button -- */
.btn96SecondaryButtonWithoutAccent:hover {
  background-color: var(--gray50);
}


/* -- Tertairy Button -- */

.btn96TertiaryButtonWithAccent:hover {
  background-color: var(--green100);
}

.btn96TertiaryButtonBorder {
  border-style: dashed !important;
  border-width: 0 0 1px 0 !important;
}

.btn96TertiaryButtonWithoutAccent:hover {
  background-color: var(--gray50);
}

/* -- Compact classes -- */

.btn96CompactButton {
  width: fit-content;
  min-width: fit-content;
  height: fit-content;
  border-radius: 0;
  padding: 0 !important;
}




/* Loader Classes */

.btn96LoadingButton {
  color: transparent !important;
}

.btn96LoadingButton .btn96ParentDimension {
  border-bottom: none;
}

.btn96LoaderContainer {
  position: absolute;
}

.btn96ButtonDisable {
  background-color: var(--gray150);
}

.btn96PrimaryButtonLoader {
  border: 2px solid var(--white); /* the loader color will always be white in dark as well as in light theme */
  border-top-color: transparent;
}

.btn96LoaderWithoutAccent { /*used because the token doesn't override the existing color of loader*/
  border: 2px solid var(--gray900);
  border-right-color: transparent;
}

.btn96LoaderMargin {
  margin-top: 4px;
}

.btn96MediumButton .btn96LoaderSize {
  width: 20px; 
  height: 20px;
}

.btn96LargeButton .btn96LoaderSize {
  width: 24px;
  height: 24px;
}

.btn96XLargeButton .btn96LoaderSize {
  width: 24px;
  height: 24px;
}

.btn96SmallButton .btn96LoaderSize {
  width: 16px;
  height: 16px;
}

.btn96BottomFixed {
  position: fixed;
  left: 0;
  border-width: 1px 0 0 0 !important;
  padding: 12px;
  width: 100%;
  z-index: 1000;
  bottom: 0;
}

